# copper-rs

./: Cargo.toml
components/tasks/cu_mpc/: Cargo.toml  README.md  cartpole_mpc.py
components/tasks/cu_mpc/src/: lib.rs
examples/cu_flight_controller_sim/: Cargo.toml  copperconfig.ron
examples/cu_flight_controller_sim/src/: main.rs  messages.rs
examples/cu_flight_controller_sim/src/tasks/: bevy_imu.rs  mod.rs
