[package]
name = "cu-mpc"
description = "A Model-Predictive Controller for the Copper project."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cu29 = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
optimization_engine = "0.9.1"
